samples/_failures_safe/1761255821_f019d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f031b691.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_f031b691.c:168:14: error: ‘TO’ undeclared (first use in this function)
  168 |         case TO
      |              ^~
./samples/SAFE/__tmp_f031b691.c:168:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f031b691.c:168:9: error: expected ‘:’ or ‘...’ at end of input
  168 |         case TO
      |         ^~~~
./samples/SAFE/__tmp_f031b691.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f031b691.c:168:9: error: expected declaration or statement at end of input
